// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emulating progress to 100% -- Material Design Progress Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Run"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
          "width": "100%",
        }
      }
    >
      <MaterialDesignProgressSpinner
        percentage={0}
        show={true}
      />
    </div>
  </div>
</div>
`;

exports[`Interactive (animated) -- Material Design Progress Spinner 1`] = `
<div>
  <div
    style={
      Object {
        "display": "flex",
        "margin": "0 0 20px 0",
        "width": "100%",
      }
    }
  >
    <Slider
      after={
        <MaterialDesignProgressSpinner
          animated={true}
          class="self-center"
          percentage={0}
          show={true}
          updateDuration={0.3}
        />
      }
      max={1000}
      min={0}
      onChange={[Function]}
      step={0}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
      value={0}
    />
  </div>
</div>
`;

exports[`Interactive (animated, updateDuration) -- Material Design Progress Spinner (hyperscript) 1`] = `
<_class
  updateDuration={0.3}
/>
`;

exports[`Interactive (animated, updateDuration) -- Material Design Progress Spinner 1`] = `
<div>
  <div
    style={
      Object {
        "display": "flex",
        "margin": "0 0 20px 0",
        "width": "100%",
      }
    }
  >
    <Slider
      after={
        <MaterialDesignProgressSpinner
          animated={undefined}
          class="self-center"
          percentage={0}
          show={true}
          updateDuration={undefined}
        />
      }
      max={1000}
      min={0}
      onChange={[Function]}
      step={0}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
      value={0}
    />
  </div>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Run"
  />
</div>
`;

exports[`Material Design Spinner -- dark tone class -- Material Design Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
      />
    </div>
  </div>
</div>
`;

exports[`No options -- iOS Spinner 1`] = `
<IOSSpinnerToggle
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`No options 1`] = `
<MaterialDesignSpinnerToggle
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: class -- Material Design Spinner 1`] = `
<MaterialDesignSpinnerToggle
  className="class-x"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: class -- iOS Spinner 1`] = `
<IOSSpinnerToggle
  className="class-x"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: className -- Material Design Spinner 1`] = `
<MaterialDesignSpinnerToggle
  className="className-x"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: className -- iOS Spinner 1`] = `
<IOSSpinnerToggle
  className="className-x"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: content -- Material Design Spinner 1`] = `
<MaterialDesignSpinnerToggle
  content={
    <span>
      Content
    </span>
  }
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: content -- iOS Spinner 1`] = `
<IOSSpinnerToggle
  content={
    <span>
      Content
    </span>
  }
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: element -- Material Design Spinner 1`] = `
<MaterialDesignSpinnerToggle
  element="span"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: element -- iOS Spinner 1`] = `
<IOSSpinnerToggle
  element="span"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: id -- Material Design Spinner 1`] = `
<MaterialDesignSpinnerToggle
  id="id-x"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: id -- iOS Spinner 1`] = `
<IOSSpinnerToggle
  id="id-x"
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: permanent (JSX) -- Material Design Spinner 1`] = `
<MaterialDesignSpinner
  permanent={true}
/>
`;

exports[`Option: permanent (JSX) -- iOS Spinner 1`] = `
<IOSSpinner
  permanent={true}
/>
`;

exports[`Option: permanent -- Material Design Spinner 1`] = `
<MaterialDesignSpinnerToggle
  instance={[Function]}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: permanent 1`] = `
<MaterialDesignProgressSpinnerToggle
  instance={[Function]}
  percentage={0.75}
  permanent={true}
  placeholderClassName="pe-spinner__placeholder"
/>
`;

exports[`Option: raised, z -- Material Design Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        raised={true}
        show={false}
        size="small"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        raised={true}
        show={false}
        size="regular"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        raised={true}
        show={false}
        size="medium"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        raised={true}
        show={false}
        size="large"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        raised={true}
        show={false}
        size="fab"
      />
    </div>
  </div>
</div>
`;

exports[`Option: size -- Material Design Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
        size="small"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
        size="regular"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
        size="medium"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
        size="large"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
        size="fab"
      />
    </div>
  </div>
</div>
`;

exports[`Option: size -- iOS Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
        size="small"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
        size="regular"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
        size="medium"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
        size="large"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
        size="fab"
      />
    </div>
  </div>
</div>
`;

exports[`Option: style (color) -- Material Design Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        show={false}
        singleColor={true}
        style={
          Object {
            "color": "#2196F3",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Option: style (color) -- iOS Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
        singleColor={true}
        style={
          Object {
            "color": "#2196F3",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Theme (color) -- Material Design Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        className="tests-spinner-themed-md-spinner"
        show={false}
      />
    </div>
  </div>
</div>
`;

exports[`Theme (color) -- iOS Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        className="tests-spinner-themed-ios-spinner"
        show={false}
      />
    </div>
  </div>
</div>
`;

exports[`Transition as theme 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <MaterialDesignSpinner
        className="tests-spinner-transitions"
        show={false}
      />
    </div>
  </div>
</div>
`;

exports[`iOS Spinner -- dark tone class -- Material Design Spinner 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <RaisedButton
    events={
      Object {
        "onClick": [Function],
      }
    }
    label="Toggle"
  />
  <div
    style={
      Object {
        "display": "flex",
        "margin": "20px 0 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "20px",
        }
      }
    >
      <IOSSpinner
        show={false}
      />
    </div>
  </div>
</div>
`;
